# minecraft-mod-installer

./: Cargo.toml
.github/workflows/: rust.yml
src/: config.rs  main.rs
src/curse/: manifest.rs  mod.rs
src/curse/testdata/: manifest.json
src/download/: mod.rs
