[package]
name = "modded-server-installer"
version = "0.1.0"
authors = ["Tony Duan <tony84727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.125", features = ["derive"]}
serde_yaml = "0.8.17"
