[package]
name = "minecraft-mod-installer"
version = "0.1.1"
authors = ["Tony Duan <tony84727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.125", features = ["derive"]}
serde_yaml = "0.8.17"
serde_json = "1.0.64"
reqwest = {version = "0.11.2"}
zip = "0.5.11"
bytes = "1.0.1"
tokio = { version = "1", features = ["full"] }
url = "2.2.1"
futures = "0.3.13"
regex = "1.4.5"